# snes-bluetooth-adapter

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: rust_ci.yml
crates/ble/: Cargo.toml
crates/ble/src/: hci.rs  lib.rs  packet.rs
crates/ble/src/hci/: command.rs  event.rs  gap.rs  mod.rs  packet.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/state/src/: lib.rs
crates/utils/src/: lib.rs
docs/: snes-controller..md  snes-controller.md
docs/plantuml/: snes-controller-timing-diagram.puml
scripts/: run_qemu.sh  run_qemu_docker.sh  setup.sh  setup_qemu.sh  setup_qemu_docker.sh  setup_toolchain.sh
src/: main.rs
